--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@ font-size: 22px;
 }
 h4
 {
-   background-color: grey;
+   background-color: rgb(11, 103, 241);
    color:white;
    line-height: 2;
 }
 canvas 
   {
-      border:3px solid white;
+      border:3px solid rgb(243, 3, 3);
       border-radius: 20px;
-      box-shadow:  5px 5px 5px white;
+      box-shadow:  5px 5px 5px rgb(94, 255, 1);
   }
